tests/test-dirs/upstream-typing-recovery/original-tests/exception_pattern_disallowed.compilers.reference
File "exception_pattern_disallowed.ml", line 1:
Error: Multiple errors were encountered
File "exception_pattern_disallowed.ml", line 12, characters 9-30:
12 |   | Some (exception Not_found) -> 10
              ^^^^^^^^^^^^^^^^^^^^^
  Exception patterns are not allowed in this position.
File "exception_pattern_disallowed.ml", line 16, characters 4-23:
16 |   | exception Not_found -> 1
         ^^^^^^^^^^^^^^^^^^^
  Exception patterns are not allowed in this position.
File "exception_pattern_disallowed.ml", line 21, characters 17-22:
21 | let u : string = t + t
                      ^^^^^
  This expression has type int but an expression was expected of type string
